--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -33,8 +33,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="48dp"
-
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -51,10 +50,12 @@
                     android:id="@+id/iv_head"
                     android:layout_width="26dp"
                     android:layout_height="26dp"
-                    android:layout_marginEnd="6dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/img_avatar_default"
-                    app:riv_oval="true" />
+                    android:layout_marginEnd="10dp"
+                    android:scaleType="center"
+                    android:src="@drawable/ic_avatar_default"
+                    app:riv_corner_radius="4dp"
+                    app:riv_mutate_background="true"
+                    app:riv_tile_mode="repeat" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -76,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="48dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -127,7 +128,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -160,7 +161,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -198,7 +199,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
                 <TextView
@@ -236,7 +237,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -285,7 +286,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -336,7 +337,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -387,7 +388,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -438,7 +439,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
@@ -487,7 +488,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:minHeight="44dp"
+                android:minHeight="46dp"
                 android:orientation="horizontal">
 
 
