--- a/app/src/main/res/layout/publicity_recommend_item.xml
+++ b/app/src/main/res/layout/publicity_recommend_item.xml
@@ -2,38 +2,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:ignore="SpUsage, ContentDescription">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/margin_14"
-        android:layout_marginVertical="@dimen/margin_7"
-        app:cardCornerRadius="@dimen/margin_5"
+        android:id="@+id/cvBlock"
+        android:layout_width="285dp"
+        android:layout_height="136dp"
+        android:layout_marginVertical="@dimen/margin_10"
+        app:cardCornerRadius="@dimen/margin_6"
         app:cardElevation="@dimen/margin_3"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_game_info"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/cl_sports_background"
-                android:layout_width="match_parent"
-                android:layout_height="156dp"
-                app:layout_constraintTop_toTopOf="parent" />
-
             <LinearLayout
+                android:id="@+id/teamInfoBlock"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:paddingBottom="@dimen/margin_8"
-                app:layout_constraintBottom_toTopOf="@+id/cl_game"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintBottom_toTopOf="@id/oddsBlock"
+                app:layout_constraintTop_toBottomOf="@id/cl_game">
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -44,9 +40,9 @@
 
                     <ImageView
                         android:id="@+id/iv_home_icon"
-                        android:layout_width="43dp"
-                        android:layout_height="43dp"
-                        android:layout_marginBottom="@dimen/margin_2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginBottom="@dimen/margin_9"
                         android:scaleType="centerInside"
                         tools:src="@drawable/bg_recommend_game_default" />
 
@@ -55,17 +51,45 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_10"
+                        android:layout_marginBottom="8dp"
                         android:ellipsize="end"
                         android:gravity="center"
+                        android:includeFontPadding="false"
                         android:maxLines="1"
-                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textColor="@color/color_BBBBBB_333333"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="Atleticon Nacional" />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="30dp"
-                    android:layout_height="match_parent" />
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_horizontal|bottom"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/margin_11"
+                        android:gravity="center"
+                        android:includeFontPadding="false"
+                        android:text="@string/verse_upper"
+                        android:textColor="@color/color_BBBBBB_333333"
+                        android:textSize="20dp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_game_play_cate_code_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="6dp"
+                        android:textColor="@color/color_7F7F7F_999999"
+                        android:textSize="@dimen/textSize12sp"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="Handicap" />
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="0dp"
@@ -76,9 +100,9 @@
 
                     <ImageView
                         android:id="@+id/iv_away_icon"
-                        android:layout_width="43dp"
-                        android:layout_height="43dp"
-                        android:layout_marginBottom="@dimen/margin_2"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:layout_marginBottom="@dimen/margin_9"
                         android:scaleType="centerInside"
                         tools:src="@drawable/bg_recommend_game_default" />
 
@@ -87,10 +111,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_10"
+                        android:layout_marginBottom="8dp"
                         android:ellipsize="end"
                         android:gravity="center"
+                        android:includeFontPadding="false"
                         android:maxLines="1"
-                        android:textColor="@color/color_FFFFFF_FFFFFF"
+                        android:textColor="@color/color_BBBBBB_333333"
                         android:textSize="@dimen/textSize12sp"
                         tools:text="Junior Barranquilla" />
                 </LinearLayout>
@@ -100,20 +126,8 @@
                 android:id="@+id/cl_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="86dp"
+                android:paddingStart="8dp"
                 app:layout_constraintTop_toTopOf="parent">
-
-                <TextView
-                    android:id="@+id/tv_game_play_cate_code_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_13"
-                    android:layout_marginTop="@dimen/margin_1"
-                    android:textColor="@color/color_317FFF_0760D4"
-                    android:textSize="@dimen/textSize12sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="1 X 2" />
 
                 <ImageView
                     android:id="@+id/ivLiveIcon"
@@ -122,17 +136,18 @@
                     android:layout_marginEnd="4dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/tvGameStatus"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tvGameStatus"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="4dp"
-                    android:textColor="@color/color_BCBCBC_666666"
+                    android:textColor="@color/color_7F7F7F_999999"
                     android:textSize="@dimen/textSize12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/tv_game_play_time"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="2ND" />
 
@@ -140,13 +155,12 @@
                     android:id="@+id/tv_game_play_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_13"
-                    android:layout_marginTop="@dimen/margin_1"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="6dp"
                     android:layout_marginEnd="4dp"
-                    android:drawablePadding="4dp"
-                    android:textColor="@color/color_BCBCBC_666666"
+                    android:textColor="@color/color_7F7F7F_999999"
                     android:textSize="@dimen/textSize12sp"
-                    app:layout_constraintEnd_toStartOf="@id/tvGameSpt"
+                    app:layout_constraintStart_toEndOf="@id/tvGameStatus"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="09:15" />
 
@@ -154,44 +168,76 @@
                     android:id="@+id/tvGameSpt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_11"
-                    android:textColor="@color/color_BCBCBC_666666"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="6dp"
+                    android:textColor="@color/color_7F7F7F_999999"
                     android:textSize="@dimen/textSize12sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/tv_game_play_time"
                     app:layout_constraintTop_toTopOf="parent"
                     tools:text="/5" />
+
+                <TextView
+                    android:id="@+id/tvLeagueName"
+                    android:layout_width="110dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="6dp"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:textColor="@color/color_BBBBBB_333333"
+                    android:textSize="12dp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Mogolia,1st Leag Mogolia,1st Leag" />
+
+                <TextView
+                    android:id="@+id/tvPlayCateCount"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_6"
+                    android:layout_marginEnd="@dimen/margin_6"
+                    android:background="@drawable/bg_publicity_recommend_count"
+                    android:drawablePadding="1dp"
+                    android:gravity="start"
+                    android:minWidth="37dp"
+                    android:padding="0dp"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="2dp"
+                    android:textColor="@color/color_FFFFFF_FFFFFF"
+                    android:textSize="@dimen/textSize12sp"
+                    android:textStyle="bold"
+                    app:drawableEndCompat="@drawable/ic_arrow_right_white"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="120" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
+                android:id="@+id/oddsBlock"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="7dp"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingHorizontal="@dimen/margin_6"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/cl_game">
+                app:layout_constraintTop_toBottomOf="@+id/teamInfoBlock">
 
                 <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_1"
+                    android:id="@+id/oddBtn1"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginHorizontal="@dimen/margin_6"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="7dp"
                     android:layout_weight="1" />
 
                 <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_2"
+                    android:id="@+id/oddBtn2"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginHorizontal="@dimen/margin_6"
-                    android:layout_weight="1" />
-
-                <org.cxct.sportlottery.ui.game.widget.OddsButtonPublicity
-                    android:id="@+id/odd_btn_3"
-                    android:layout_width="0dp"
-                    android:layout_height="30dp"
-                    android:layout_marginHorizontal="@dimen/margin_6"
+                    android:layout_marginEnd="8dp"
                     android:layout_weight="1" />
 
             </LinearLayout>
@@ -203,8 +249,8 @@
         android:id="@+id/clVsBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="3dp"
         android:layout_marginTop="@dimen/margin_6"
+        android:elevation="3dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -229,8 +275,8 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/margin_1"
+            android:orientation="horizontal"
             android:paddingHorizontal="@dimen/margin_6"
             app:layout_constraintBottom_toBottomOf="@+id/iv_vs_bar"
             app:layout_constraintEnd_toEndOf="@+id/iv_vs_bar"
@@ -282,25 +328,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/tvLeagueName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="12dp"
-            android:layout_marginBottom="6dp"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/color_BCBCBC_666666"
-            android:textSize="12dp"
-            app:layout_constraintBottom_toBottomOf="@id/iv_no_vs_bar"
-            app:layout_constraintEnd_toEndOf="@id/iv_no_vs_bar"
-            app:layout_constraintStart_toStartOf="@id/iv_no_vs_bar"
-            app:layout_constraintTop_toTopOf="@id/iv_no_vs_bar"
-            tools:text="Mogolia,1st Leag Mogolia,1st Leag" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
