--- a/app/src/main/res/values/symbol_string.xml
+++ b/app/src/main/res/values/symbol_string.xml
@@ -12,6 +12,7 @@
     <string name="percent">%</string>
     <string name="id">ID</string>
     <string name="at">\u0040</string>
+    <string name="verse_upper">VS</string>
 
 
     <!--  Member Level Page  -->
