--- a/app/src/main/res/layout/content_bet_info_item_v3.xml
+++ b/app/src/main/res/layout/content_bet_info_item_v3.xml
@@ -126,17 +126,24 @@
                     app:layout_constraintBottom_toTopOf="@+id/tv_match"
                     tools:text="让球" />
 
+                <androidx.constraintlayout.widget.Guideline
+                    android:id="@+id/guideline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    app:layout_constraintGuide_percent="0.79" />
+
                 <!--玩法名稱:讓球,獨贏..-->
                 <TextView
                     android:id="@+id/tv_match"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="6dp"
                     android:ellipsize="end"
                     android:maxLines="2"
                     android:textColor="@color/color_909090_666666"
                     android:textSize="@dimen/textSize13sp"
                     app:layout_constraintStart_toStartOf="@+id/ivSportLogo"
+                    app:layout_constraintEnd_toEndOf="@+id/guideline"
                     app:layout_constraintBottom_toTopOf="@+id/cl_editText_container"
                     tools:text="纽卡斯尔 v 切尔西" />
 
@@ -152,8 +159,7 @@
                     android:textColor="@color/color_939393_666666"
                     android:textSize="@dimen/textSize10sp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_match"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/tv_match" />
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/cl_editText_container"
