[新增] 新版宣傳頁 - 優惠活動清單雛形(缺少互動事件)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -108,6 +108,7 @@
     <color name="color_FA0200">#FA0200</color>
     <color name="color_ECEDEF">#ECEDEF</color>
     <color name="color_F7F7F7">#F7F7F7</color>
+    <color name="color_EBEBEB">#EBEBEB</color>
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
 
