--- a/app/src/main/res/layout/view_toolbar_publicity.xml
+++ b/app/src/main/res/layout/view_toolbar_publicity.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolBar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/tool_bar_height"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@drawable/bg_title"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     app:layout_scrollFlags="scroll|enterAlways"
@@ -44,7 +44,7 @@
             android:id="@+id/tv_language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/color_BBBBBB_333333"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize14sp"
             tools:text="@string/language_cn" />
 
@@ -52,8 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="6dp"
-            android:layout_marginEnd="20dp"
-            android:src="@drawable/arrow_gray" />
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_droparrow" />
     </LinearLayout>
 
     <ImageView
