--- a/app/src/main/res/layout/publicity_promotion_announcement_view.xml
+++ b/app/src/main/res/layout/publicity_promotion_announcement_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="38dp"
+    android:layout_marginTop="8dp"
     android:background="@color/color_191919_FCFCFC"
     tools:ignore="SpUsage, ContentDescription">
 
