--- a/app/src/main/res/layout/view_publicity_menu.xml
+++ b/app/src/main/res/layout/view_publicity_menu.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC">
+    android:background="@color/color_191919_FCFCFC"
+    android:paddingBottom="10dp">
 
     <LinearLayout
+        android:id="@+id/tabBlock"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -71,5 +73,23 @@
             app:cvTitle="@string/contact" />
     </LinearLayout>
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vpSports"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@id/rvIndicator"
+        app:layout_constraintTop_toBottomOf="@id/tabBlock" />
+
+    <!--  ViewPager指示器  -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/vpSports" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
