整併重複的翻譯文字

--- a/app/src/main/res/layout/activity_maintenance.xml
+++ b/app/src/main/res/layout/activity_maintenance.xml
@@ -82,7 +82,7 @@
         android:minHeight="36dp"
         android:paddingStart="18dp"
         android:paddingEnd="18dp"
-        android:text="@string/btn_service_maintain"
+        android:text="@string/btn_service"
         android:textAllCaps="true"
         android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize14sp"
