--- a/app/src/main/res/layout/fragment_bet_receipt.xml
+++ b/app/src/main/res/layout/fragment_bet_receipt.xml
@@ -207,7 +207,7 @@
             android:gravity="center"
             android:paddingTop="2dp"
             android:paddingBottom="2dp"
-            android:text="@string/already_bet_complete"
+            android:text="@string/bet_succeeded"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize13sp"
             android:visibility="gone"
