--- a/app/src/main/res/layout/activity_info_center.xml
+++ b/app/src/main/res/layout/activity_info_center.xml
@@ -58,7 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:gravity="center"
-            android:text="@string/time"
+            android:text="@string/record_time"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize12sp" />
 
