--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -177,7 +177,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="10dp"
-                    android:text="@string/member_account_in_profile"
+                    android:text="@string/member_account"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp" />
 
