--- a/app/src/main/res/layout/content_type_more_item.xml
+++ b/app/src/main/res/layout/content_type_more_item.xml
@@ -11,7 +11,7 @@
         android:id="@+id/tv_expand_control"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/odds_detail_more"
+        android:text="@string/display_more"
         android:textColor="@color/color_909090_666666"
         android:textSize="@dimen/textSize15sp"
         app:layout_constraintBottom_toBottomOf="parent"
