--- a/app/src/main/res/layout/dialog_bottom_sheet_eps.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_eps.xml
@@ -32,7 +32,7 @@
             android:id="@+id/tv_game_type_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/home_title_eps"
+            android:text="@string/premium_odds"
             android:textColor="@color/color_BBBBBB_333333"
             android:textSize="@dimen/textSize16sp"
             android:layout_marginStart="10dp"
