--- a/app/src/main/res/layout/dialog_custom_alert.xml
+++ b/app/src/main/res/layout/dialog_custom_alert.xml
@@ -120,7 +120,7 @@
                 android:background="@null"
                 android:minWidth="135dp"
                 android:minHeight="36dp"
-                android:text="@string/btn_determine"
+                android:text="@string/btn_confirm"
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize14sp"
                 android:textStyle="bold" />
