--- a/app/src/main/res/layout/dialog_money_transfer_record_detail.xml
+++ b/app/src/main/res/layout/dialog_money_transfer_record_detail.xml
@@ -164,7 +164,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/remark"
+            android:text="@string/remarks"
             android:textColor="@color/color_AEAEAE_404040"
             app:layout_constraintEnd_toStartOf="@+id/tv_state"
             app:layout_constraintHorizontal_bias="1.0"
