--- a/app/src/main/res/layout/dialog_password_verify.xml
+++ b/app/src/main/res/layout/dialog_password_verify.xml
@@ -98,7 +98,7 @@
                 android:layout_height="44dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/btn_cancel_new"
+                android:text="@string/btn_cancel"
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -113,7 +113,7 @@
                 android:layout_height="44dp"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:text="@string/self_limit_submit_button"
+                android:text="@string/btn_confirm"
                 android:textColor="@color/color_317FFF_0760D4"
                 android:textSize="@dimen/textSize14sp" />
 
