--- a/app/src/main/res/layout/dialog_redenvelope_log_detail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_log_detail.xml
@@ -104,7 +104,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="10dp"
-            android:text="@string/tran_type_sub"
+            android:text="@string/log_detail_type_sub"
             android:textColor="@color/color_AEAEAE_404040"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/wd_log_detail_amount_subtitle" />
