--- a/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item_v2.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_betinfo_item_v2.xml
@@ -65,7 +65,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/margin_8"
-                        android:text="@string/bet_list_title"
+                        android:text="@string/bet_slip"
                         android:textColor="@color/color_FFFFFF_FFFFFF"
                         android:textSize="@dimen/textSize14sp"
                         android:textStyle="bold"
