--- a/app/src/main/res/layout/item_account_history_next_content_parlay.xml
+++ b/app/src/main/res/layout/item_account_history_next_content_parlay.xml
@@ -37,7 +37,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/sum_pass"
+                android:text="@string/label_title_parlay"
                 android:textColor="@color/color_191919_FCFCFC"
                 android:textSize="@dimen/textSize14sp"
                 app:autoSizeMaxTextSize="@dimen/textSize12sp"
