--- a/app/src/main/res/layout/view_bottom_navigation_sport.xml
+++ b/app/src/main/res/layout/view_bottom_navigation_sport.xml
@@ -18,7 +18,7 @@
             android:layout_margin="8dp"
             android:layout_marginBottom="8dp"
             android:background="@color/color_FF9143_ff9200"
-            android:text="@string/button_league_submit"
+            android:text="@string/submit"
             android:textColor="@color/color_FCFCFC"
             android:textSize="@dimen/textSize14sp"
             android:visibility="gone"
@@ -66,7 +66,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin_9"
-            android:text="@string/bet_list_title"
+            android:text="@string/bet_slip"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toBottomOf="parent"
