--- a/app/src/main/res/layout/button_bet.xml
+++ b/app/src/main/res/layout/button_bet.xml
@@ -34,6 +34,23 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/tv_remove_closed_selections"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/button_radius_4_0065e9_3b78ff"
+        android:gravity="center"
+        android:text="@string/btn_remove_closed_selections"
+        android:textColor="@color/color_FFFFFF_FFFFFF"
+        android:textSize="@dimen/textSize14sp"
+        android:visibility="gone"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="gone" />
+
+    <TextView
         android:id="@+id/tv_login"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
