--- a/app/src/main/res/layout/view_publicity_promotion.xml
+++ b/app/src/main/res/layout/view_publicity_promotion.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="8dp"
         android:gravity="center">
 
         <TextView
@@ -25,9 +25,11 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/tvMore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="14dp"
+            android:layout_marginEnd="10dp"
+            android:padding="4dp"
             android:text="@string/more"
             android:textColor="@color/color_317FFF_0760D4"
             android:textSize="@dimen/textSize12sp" />
@@ -37,6 +39,5 @@
         android:id="@+id/rvPromotion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
         android:layout_marginBottom="8dp" />
 </androidx.appcompat.widget.LinearLayoutCompat>
