--- a/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
+++ b/app/src/main/res/layout/item_bet_list_batch_control_connect_v3.xml
@@ -136,7 +136,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_18"
-                        android:paddingTop="@dimen/margin_6"
+                        android:includeFontPadding="false"
+                        android:paddingTop="@dimen/margin_8"
                         android:text="@string/bet_info_bet_balance_insufficient"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize13sp"
@@ -148,11 +149,25 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="@dimen/margin_18"
-                        android:paddingTop="6dp"
+                        android:includeFontPadding="false"
+                        android:paddingTop="@dimen/margin_8"
                         android:textColor="@color/color_E44438_e44438"
                         android:textSize="@dimen/textSize13sp"
                         android:visibility="gone"
                         android:text="@string/bet_info_list_minimum_limit_amount"
+                        tools:visibility="visible" />
+
+                    <TextView
+                        android:id="@+id/tvPleaseEnterCorrectAmountParlay"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/margin_18"
+                        android:includeFontPadding="false"
+                        android:paddingTop="@dimen/margin_8"
+                        android:text="@string/please_enter_correct_amount"
+                        android:textColor="@color/color_E44438_e44438"
+                        android:textSize="@dimen/textSize13sp"
+                        android:visibility="gone"
                         tools:visibility="visible" />
                 </LinearLayout>
 
