[新增] 新版宣傳頁 - 夜色模式

--- a/app/src/main/res/drawable/bg_publicity_promotion_item_board.xml
+++ b/app/src/main/res/drawable/bg_publicity_promotion_item_board.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="6dp" />
-            <gradient android:angle="135" android:endColor="@color/color_F7F7F7" android:startColor="@color/color_EBEBEB" />
+            <gradient android:angle="135" android:endColor="@color/color_212121_F7F7F7" android:startColor="@color/color_242424_EBEBEB" />
         </shape>
     </item>
 </selector>
