--- a/app/src/main/res/drawable/bg_publicity_promotion_item.xml
+++ b/app/src/main/res/drawable/bg_publicity_promotion_item.xml
@@ -2,11 +2,14 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="6dp"/>
-            <gradient android:angle="135" android:endColor="@color/color_1A1A1A_FAFAFA" android:startColor="@color/color_141414_f3f3f3" />
-            <stroke android:width="1dp" android:color="@color/transparent"/>
+            <corners android:radius="6dp" />
+            <gradient
+                android:angle="135"
+                android:endColor="@color/color_242424_FAFAFA"
+                android:startColor="@color/color_2a2a2a_f3f3f3" />
+            <stroke
+                android:width="1dp"
+                android:color="@color/transparent" />
         </shape>
     </item>
-
-
 </layer-list>
