--- a/app/src/main/res/drawable/bg_radius_4_publicity_odd_button_dark.xml
+++ b/app/src/main/res/drawable/bg_radius_4_publicity_odd_button_dark.xml
@@ -4,10 +4,7 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="1dp"
-        android:color="#E1E6F1" />
-    <gradient
-        android:angle="270"
-        android:centerColor="#E0E4EC"
-        android:endColor="@color/color_F5F5F5"
-        android:startColor="@color/color_FFFFFF" />
+        android:color="@color/color_303030" />
+    <solid android:color="@color/color_242424" />
+
 </shape>
