--- a/app/src/main/res/drawable/publicity_indicator_tab_selected.xml
+++ b/app/src/main/res/drawable/publicity_indicator_tab_selected.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <size android:width="14dp" android:height="3dp" />
             <corners android:radius="1.5dp" />
-            <solid android:color="@color/color_3A81E5" />
+            <solid android:color="@color/color_317FFF_3A81E5" />
         </shape>
     </item>
 </selector>
