--- a/app/src/main/res/drawable/publicity_indicator_tab_unselected.xml
+++ b/app/src/main/res/drawable/publicity_indicator_tab_unselected.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <size android:width="8dp" android:height="3dp" />
             <corners android:radius="1.5dp" />
-            <solid android:color="@color/color_EDF1F5" />
+            <solid android:color="@color/color_2D2F31_EDF1F5" />
         </shape>
     </item>
 </selector>
