--- a/app/src/main/res/layout/button_odd_detail_publicity.xml
+++ b/app/src/main/res/layout/button_odd_detail_publicity.xml
@@ -56,14 +56,13 @@
                     android:gravity="center"
                     android:maxLines="1"
                     android:paddingHorizontal="1dp"
-                    android:textColor="@color/selector_button_odd_top_text"
+                    android:textColor="@color/selector_publicity_button_odd_top_text"
                     android:textSize="@dimen/textSize14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/oddBlock"
                     app:layout_constraintStart_toEndOf="@id/tv_name"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="-0/0.5"
-                    tools:textColor="@color/color_F75452_b73a20" />
+                    tools:text="-0/0.5" />
 
                 <LinearLayout
                     android:id="@+id/oddBlock"
