--- a/app/src/main/res/layout/publicity_announcement_view.xml
+++ b/app/src/main/res/layout/publicity_announcement_view.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:paddingStart="23dp"
     android:paddingEnd="25dp"
-    android:paddingVertical="@dimen/margin_3"
-    android:background="@color/color_191919_FCFCFC">
+    android:background="@drawable/bg_gradient_announcement">
 
     <ImageView
         android:id="@+id/iv_broadcast_icon"
@@ -15,6 +14,8 @@
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
+        android:layout_marginTop="9dp"
+        android:layout_marginBottom="9dp"
         android:src="@drawable/ic_icon_volume"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,6 +26,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_marginStart="@dimen/margin_6"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:clipChildren="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/iv_broadcast_icon"
