--- a/app/src/main/res/layout/publicity_recommend_item.xml
+++ b/app/src/main/res/layout/publicity_recommend_item.xml
@@ -13,6 +13,7 @@
         android:layout_marginVertical="@dimen/margin_10"
         app:cardCornerRadius="@dimen/margin_6"
         app:cardElevation="@dimen/margin_3"
+        app:cardBackgroundColor="@color/color_202020_FCFCFC"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +85,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="6dp"
-                        android:textColor="@color/color_7F7F7F_999999"
+                        android:textColor="@color/color_999999_999999"
                         android:textSize="@dimen/textSize12sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -145,7 +146,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="4dp"
-                    android:textColor="@color/color_7F7F7F_999999"
+                    android:textColor="@color/color_999999_999999"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -158,7 +159,7 @@
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="6dp"
                     android:layout_marginEnd="4dp"
-                    android:textColor="@color/color_7F7F7F_999999"
+                    android:textColor="@color/color_999999_999999"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintStart_toEndOf="@id/tvGameStatus"
                     app:layout_constraintTop_toTopOf="parent"
@@ -170,7 +171,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginTop="6dp"
-                    android:textColor="@color/color_7F7F7F_999999"
+                    android:textColor="@color/color_999999_999999"
                     android:textSize="@dimen/textSize12sp"
                     app:layout_constraintStart_toEndOf="@id/tv_game_play_time"
                     app:layout_constraintTop_toTopOf="parent"
