--- a/app/src/main/res/layout/view_publicity_promotion.xml
+++ b/app/src/main/res/layout/view_publicity_promotion.xml
@@ -39,5 +39,6 @@
         android:id="@+id/rvPromotion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        tools:listitem="@layout/publicity_promotion_item"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
